--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,42 @@
 ---
-
+import Education from "@/components/Education";
+import Footer from "@/components/Footer";
+import Header from "@/components/Header";
+import Languages from "@/components/Languages";
+import Projects from "@/components/Projects";
+import Skills from "@/components/Skills";
+import AnimationProvider from "@/components/AnimationProvider";
+import "@/styles/main.scss";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <AnimationProvider client:only="react">
+      <div class="bg-gray-300 overflow-x-hidden">
+        <Header />
+        <main class="my-10 sm:mx-4 md:mx-8 lg:mx-12">
+          <div class="flex flex-wrap -mt-8">
+            <div class="w-full lg:w-2/3 sm:px-4 text-lg mt-8">
+              <Skills />
+              <Projects />
+            </div>
+
+            <div class="w-full lg:w-1/3 sm:px-4 mt-8">
+              {/* <Info /> */}
+              <Education />
+              <Languages />
+            </div>
+          </div>
+        </main>
+        <Footer />
+      </div>
+    </AnimationProvider>
+  </body>
 </html>
