--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Header from "@/components/Header";
 import Languages from "@/components/Languages";
 import Projects from "@/components/Projects";
 import Skills from "@/components/Skills";
-import AnimationProvider from "@/components/AnimationProvider";
+import VenoBoxAnimations from "@/components/VenoBoxAnimations";
 import "@/styles/main.scss";
 import "@fontsource/lato";
 import "@fontsource/montserrat/400.css";
@@ -24,25 +24,24 @@ import "@fontsource/montserrat/700.css";
     <title>Ritesh Sahu | Developer</title>
   </head>
   <body>
-    <AnimationProvider>
-      <div class="bg-gray-300 overflow-x-hidden">
-        <Header />
-        <main class="my-10 sm:mx-4 md:mx-8 lg:mx-12">
-          <div class="flex flex-wrap -mt-8">
-            <div class="w-full lg:w-2/3 sm:px-4 text-lg mt-8">
-              <Skills />
-              <Projects />
-            </div>
-
-            <div class="w-full lg:w-1/3 sm:px-4 mt-8">
-              {/* <Info /> */}
-              <Education />
-              <Languages />
-            </div>
+    <div class="bg-gray-300 overflow-x-hidden">
+      <Header />
+      <main class="my-10 sm:mx-4 md:mx-8 lg:mx-12">
+        <div class="flex flex-wrap -mt-8">
+          <div class="w-full lg:w-2/3 sm:px-4 text-lg mt-8">
+            <Skills />
+            <Projects />
           </div>
-        </main>
-        <Footer />
-      </div>
-    </AnimationProvider>
+
+          <div class="w-full lg:w-1/3 sm:px-4 mt-8">
+            {/* <Info /> */}
+            <Education />
+            <Languages />
+          </div>
+        </div>
+      </main>
+      <Footer />
+      <VenoBoxAnimations client:only="react" />
+    </div>
   </body>
 </html>
