--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Education from "@/components/Education";
-import Footer from "@/components/Footer";
-import Header from "@/components/Header";
-import Languages from "@/components/Languages";
-import Projects from "@/components/Projects";
-import Skills from "@/components/Skills";
-import VenoBoxAnimations from "@/components/VenoBoxAnimations";
+import Education from "@/components/Education.astro";
+import Footer from "@/components/Footer.astro";
+import Header from "@/components/Header.astro";
+import Languages from "@/components/Languages.astro";
+import Projects from "@/components/Projects.astro";
+import Skills from "@/components/Skills.astro";
+import VenoBoxAnimations from "@/components/VenoBoxAnimations.astro";
 import "@/styles/main.scss";
 import "@fontsource/lato";
 import "@fontsource/montserrat/400.css";
@@ -15,7 +15,7 @@ import "@fontsource/montserrat/700.css";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="author" content="Ritesh Sahu" />
@@ -41,7 +41,7 @@ import "@fontsource/montserrat/700.css";
         </div>
       </main>
       <Footer />
-      <VenoBoxAnimations client:only="react" />
+      <VenoBoxAnimations />
     </div>
   </body>
 </html>
