--- a/src/components/Languages.astro
+++ b/src/components/Languages.astro
@@ -1,13 +1,15 @@
 <aside class="card">
   <h2 class="heading-2">Languages</h2>
   <ul>
-    <li class="mb-3">
-      <span class="title">English:</span>
+    <li class="mb-3 flex items-baseline align-middle">
+      <span class="heading-3 font-display">English</span>
+      <span class="text-gray-700 mx-2">-</span>
       <span class="text-gray-700">Professional</span>
     </li>
 
     <li>
-      <span class="title">Hindi:</span>
+      <span class="heading-3 font-display">Hindi</span>
+      <span class="text-gray-700 mx-2">-</span>
       <span class="text-gray-700">Native Speaker</span>
     </li>
   </ul>
