--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -56,7 +56,17 @@ import { Image } from "astro:assets";
                 data-vbtype="inline"
                 href={`#${project.name?.toLowerCase()}-stack`}
               >
-                <span class="icon icon-unlink pr-2" />
+                <span class="w-7">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="21"
+                    height="21"
+                    fill="currentColor"
+                    viewBox="0 0 256 256"
+                  >
+                    <path d="M117.18,188.74a12,12,0,0,1,0,17l-5.12,5.12A58.26,58.26,0,0,1,70.6,228h0A58.62,58.62,0,0,1,29.14,127.92L63.89,93.17a58.64,58.64,0,0,1,98.56,28.11,12,12,0,1,1-23.37,5.44,34.65,34.65,0,0,0-58.22-16.58L46.11,144.89A34.62,34.62,0,0,0,70.57,204h0a34.41,34.41,0,0,0,24.49-10.14l5.11-5.12A12,12,0,0,1,117.18,188.74ZM226.83,45.17a58.65,58.65,0,0,0-82.93,0l-5.11,5.11a12,12,0,0,0,17,17l5.12-5.12a34.63,34.63,0,1,1,49,49L175.1,145.86A34.39,34.39,0,0,1,150.61,156h0a34.63,34.63,0,0,1-33.69-26.72,12,12,0,0,0-23.38,5.44A58.64,58.64,0,0,0,150.56,180h.05a58.28,58.28,0,0,0,41.47-17.17l34.75-34.75a58.62,58.62,0,0,0,0-82.91Z" />
+                  </svg>
+                </span>
                 <span class="text-base hover:underline">
                   View Full Technology Stack
                 </span>
@@ -74,7 +84,18 @@ import { Image } from "astro:assets";
             class="link-simple flex items-center"
             target="_blank"
           >
-            <span class="icon icon-external-link-symbol pr-2" />
+            <span class="w-7">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                viewBox="0 0 512 512"
+              >
+                <path
+                  fill="currentColor"
+                  d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
+                />
+              </svg>
+            </span>
             <span class="text-base hover:underline align-baseline">
               Find Out More
             </span>
