--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -3,10 +3,9 @@
   <ul>
     <li>
       <div class="flex">
-        <span class="icon icon-college-graduation text-xl pr-3"></span>
         <h3 class="heading-3">Bachelor of Computer Applications</h3>
       </div>
-      <div class="pl-8">
+      <div>
         <span class="text-sm">Indira Gandhi National Open University</span>
       </div>
     </li>
