--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,40 +16,38 @@
       <ul class="flex items-center justify-center sm:justify-start -ml-3">
         <li class="px-3">
           <a
-            href="https://github.com/riteshsahu"
-            rel="noreferrer"
-            target="_blank"
-            title="Github account"
-          >
-            <span class="icon icon-github-logo text-3xl"></span>
-          </a>
-        </li>
-
-        <li class="px-3">
-          <a
-            href="https://stackoverflow.com/users/9611553/ritesh-sahu"
-            rel="noreferrer"
-            target="_blank"
-            title="Stackoverflow profile"
-          >
-            <span class="icon icon-stackoverflow-logo text-3xl">
-              <span class="path1"></span>
-              <span class="path2"></span>
-            </span>
-          </a>
-        </li>
-
-        <li class="px-3">
-          <a
             href="https://www.linkedin.com/in/riteshsahu314/"
             rel="noreferrer"
             target="_blank"
             title="Linkedin profile"
           >
-            <span class="icon icon-linkedin-logo text-3xl">
-              <span class="path1"></span>
-              <span class="path2"></span>
-            </span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="32.00 32.00 448.00 448.00"
+              width="30"
+              ><path
+                fill="rgb(0, 122, 185)"
+                d="M444.17 32H70.28C49.85 32 32 46.7 32 66.89v374.72C32 461.91 49.85 480 70.28 480h373.78c20.54 0 35.94-18.21 35.94-38.39V66.89C480.12 46.7 464.6 32 444.17 32zm-273.3 373.43h-64.18V205.88h64.18zM141 175.54h-.46c-20.54 0-33.84-15.29-33.84-34.43 0-19.49 13.65-34.42 34.65-34.42s33.85 14.82 34.31 34.42c-.01 19.14-13.31 34.43-34.66 34.43zm264.43 229.89h-64.18V296.32c0-26.14-9.34-44-32.56-44-17.74 0-28.24 12-32.91 23.69-1.75 4.2-2.22 9.92-2.22 15.76v113.66h-64.18V205.88h64.18v27.77c9.34-13.3 23.93-32.44 57.88-32.44 42.13 0 74 27.77 74 87.64z"
+              ></path>
+            </svg>
+          </a>
+        </li>
+
+        <li class="px-3">
+          <a
+            href="https://github.com/riteshsahu"
+            rel="noreferrer"
+            target="_blank"
+            title="Github account"
+          >
+            <svg
+              width="30"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="32.00 32.00 448.00 448.00"
+              ><path
+                d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 0 0 3.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 0 1-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0 0 25.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 0 1 5-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 0 1 112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 0 1 5 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 0 0 4-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"
+              ></path>
+            </svg>
           </a>
         </li>
       </ul>
@@ -60,9 +58,19 @@
         href="mailto:riteshsahu314@gmail.com"
         rel="noreferrer"
         title="Send mail to Ritesh Sahu"
-        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-full text-center sm:w-auto whitespace-no-wrap inline-block"
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-full text-center sm:w-auto whitespace-no-wrap flex items-center"
       >
-        <span class="icon icon-paper-plane">&nbsp;</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="18"
+          height="18"
+          fill="#ffffff"
+          class="mr-2"
+          viewBox="0 0 256 256"
+          ><path
+            d="M231.4,44.34s0,.1,0,.15l-58.2,191.94a15.88,15.88,0,0,1-14,11.51q-.69.06-1.38.06a15.86,15.86,0,0,1-14.42-9.15L107,164.15a4,4,0,0,1,.77-4.58l57.92-57.92a8,8,0,0,0-11.31-11.31L96.43,148.26a4,4,0,0,1-4.58.77L17.08,112.64a16,16,0,0,1,2.49-29.8l191.94-58.2.15,0A16,16,0,0,1,231.4,44.34Z"
+          ></path>
+        </svg>
         <span class="uppercase">mail</span>
       </a>
     </div>
