--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,8 +2,19 @@
 import { projects } from "@/config/projects";
 import { classNames } from "@/utils/helpers";
 import { Image } from "astro:assets";
+const allBigImages = projects.reduce(
+  (pv, cv) => [...pv, ...cv.images.map((img) => img.big)],
+  []
+);
 ---
 
+<Fragment slot="head">
+  {
+    allBigImages.map((img) => (
+      <link rel="prefetch" href={img} as="image" crossorigin="anonymous" />
+    ))
+  }
+</Fragment>
 <section class="card">
   <h2 class="heading-2">Projects</h2>
 
@@ -24,32 +35,51 @@ import { Image } from "astro:assets";
             </h3>
 
             <p class="pb-1">{project.desc}</p>
-            <p>
-              <span class="text-gray-800">Technology Stack - </span>
-              {project.techStack}
-            </p>
+            <div class="flex items-center text-slate-800 text-base mb-3 flex-wrap">
+              <span class="mr-2">Technology Stack: </span>
+              {/* {project.techStack?.split(", ").join(" ● ")} */}
+              <span class="flex items-center flex-wrap">
+                {project.techStack
+                  ?.split(", ")
+                  .reduce(
+                    (pv, cv): any =>
+                      pv === null
+                        ? [cv]
+                        : [
+                            ...pv,
+                            <span class="text-sm mx-1.5">{" ● "}</span>,
+                            cv,
+                          ],
+                    null
+                  )}
+              </span>
+            </div>
           </div>
-          <div class="flex align-middle my-1 flex-wrap">
-            {project.images.map((dt) => (
-              <a
-                class={classNames(
-                  "mr-2 border-2 border-gray-500 mb-2",
-                  `js--modal-image-${project.name.toLowerCase()}`
-                )}
-                data-gall={`${project.name?.toLowerCase()}Gallary`}
-                href={dt}
-              >
-                <Image
-                  width={40}
-                  height={24}
-                  src={dt}
-                  alt="Project Screenshot"
-                  class="w-10 h-6"
-                />
-              </a>
-            ))}
+          <div class="flex align-middle my-1 flex-wrap mb-3">
+            {project.images.map((dt) => {
+              const name = project.name?.replace(/\s/g, "").toLowerCase();
+
+              return (
+                <a
+                  class={classNames(
+                    "mr-2 border-2 border-gray-500 mb-2",
+                    `js--modal-image-${name}`
+                  )}
+                  data-gall={`${name}_gallary`}
+                  href={dt.big}
+                >
+                  <Image
+                    width={40}
+                    height={24}
+                    src={dt.small}
+                    alt="Project Screenshot"
+                    class="w-10 h-6"
+                  />
+                </a>
+              );
+            })}
           </div>
-          {project.fullTechStack && (
+          {/* {project.fullTechStack && (
             <div class="mb-1">
               <a
                 class="link-simple flex items-center venobox"
@@ -77,17 +107,17 @@ import { Image } from "astro:assets";
                 </div>
               </div>
             </div>
-          )}
+          )} */}
           <a
             rel="noreferrer"
             href={project.link}
             class="link-simple flex items-center"
             target="_blank"
           >
-            <span class="w-7">
+            <span class="w-6">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
+                width="14"
                 viewBox="0 0 512 512"
               >
                 <path
@@ -97,7 +127,7 @@ import { Image } from "astro:assets";
               </svg>
             </span>
             <span class="text-base hover:underline align-baseline">
-              Find Out More
+              Visit Website
             </span>
           </a>
         </li>
