add info section

--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -1,19 +1,44 @@
 <aside class="card mb-8">
   <ul>
-    <li class="mb-5">
-      <span class="icon icon-location-pin text-xl pr-2 text-green-800"></span>
-      <a
-        class="link venobox"
-        title="Map"
-        data-vbtype="iframe"
-        href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235527.45447270284!2d75.72376176463997!3d22.72391172974405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3962fcad1b410ddb%3A0x96ec4da356240f4!2sIndore%2C+Madhya+Pradesh%2C+India!5e0!3m2!1sen!2sus!4v1566148491374!5m2!1sen!2sus"
+    <li class="mb-5 flex items-center">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-5 mr-2 text-gray-600"
       >
-        Indore, Madhya Pradesh, India
-      </a>
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"></path>
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"
+        ></path>
+      </svg>
+
+      Indore, Madhya Pradesh, India
     </li>
 
-    <li class="mb-5 whitespace-no-wrap">
-      <span class="icon icon-email text-xl pr-2 text-orange-600"></span>
+    <li class="mb-5 whitespace-no-wrap flex items-center">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-5 mr-2 text-gray-600"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
+        ></path>
+      </svg>
+
       <a
         class="link"
         href="mailto:riteshsahu314@gmail.com"
@@ -23,7 +48,32 @@
       </a>
     </li>
 
-    <li>
+    <li class="flex items-center">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-5 mr-2 text-gray-600"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3"
+        ></path>
+      </svg>
+
+      <a
+        class="link"
+        href="https://drive.google.com/uc?export=download&id=1jYkmYeQRQzp9cBmj2YEMFIiqxNRJs5pJ"
+        title="Download Ritesh Sahu's CV"
+      >
+        Download CV
+      </a>
+    </li>
+
+    <!-- <li>
       <span class="icon icon-customer text-xl pr-2 text-indigo-700"></span>
       <a
         class="js--contact-me link"
@@ -33,6 +83,6 @@
       >
         Contact Me
       </a>
-    </li>
+    </li> -->
   </ul>
 </aside>
