--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Info from "@/components/Info.astro";
 import Education from "@/components/Education.astro";
 import Footer from "@/components/Footer.astro";
 import Header from "@/components/Header.astro";
@@ -36,7 +37,7 @@ import "@fontsource/montserrat/700.css";
           </div>
 
           <div class="w-full lg:w-1/3 sm:px-4 mt-8">
-            {/* <Info /> */}
+            <Info />
             <Education />
             <Languages />
           </div>
