--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,78 @@
 ---
-import Info from "@/components/Info.astro";
-import Education from "@/components/Education.astro";
-import Footer from "@/components/Footer.astro";
+// import Education from "@/components/Education.astro";
 import Header from "@/components/Header.astro";
-import Languages from "@/components/Languages.astro";
+import Footer from "@/components/Footer.astro";
+import Intro from "@/components/Intro.astro";
 import Projects from "@/components/Projects.astro";
-import Skills from "@/components/Skills.astro";
-import VenoBoxAnimations from "@/components/VenoBoxAnimations.astro";
+// import About from "@/components/About.astro";
+import Contact from "@/components/Contact2.astro";
+import { SECTION } from "@/config";
+import { metaDetails } from "@/config/details";
+// import Experience from "@/components/Experience.astro";
+// import VenoBoxAnimations from "@/components/VenoBoxAnimations.astro";
 import "@/styles/main.scss";
-import "@fontsource/lato";
-import "@fontsource/montserrat/400.css";
-import "@fontsource/montserrat/700.css";
+
+const sections = [
+  { id: SECTION.INTRO, Component: Intro },
+  // { id: SECTION.ABOUT, Component: About },
+  // { id: SECTION.EXPERIENCE, Component: Experience },
+  { id: SECTION.PROJECTS, Component: Projects },
+  { id: SECTION.CONTACT, Component: Contact },
+];
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="/favicon.ico" sizes="48x48" />
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta name="author" content="Ritesh Sahu" />
-    <meta name="designer" content="Ritesh Sahu" />
-    <meta name="description" content="Webpage for Ritesh Sahu Portfolio" />
-    <title>Ritesh Sahu | Developer</title>
-  </head>
-  <body>
-    <div class="bg-gray-300 overflow-x-hidden">
-      <Header />
-      <main class="my-10 sm:mx-4 md:mx-8 lg:mx-12">
-        <div class="flex flex-wrap -mt-8">
-          <div class="w-full lg:w-2/3 sm:px-4 text-lg mt-8">
-            <Skills />
-            <Projects />
-          </div>
+    <meta name="author" content={metaDetails.author} />
 
-          <div class="w-full lg:w-1/3 sm:px-4 mt-8">
-            <Info />
-            <Education />
-            <Languages />
-          </div>
-        </div>
-      </main>
-      <Footer />
-      <VenoBoxAnimations />
-    </div>
+    <title>{metaDetails.title}</title>
+    <meta property="og:title" content={metaDetails.title} />
+    <meta property="og:description" content={metaDetails.description} />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content={metaDetails.url} />
+    <meta property="og:site_name" content={metaDetails.author} />
+    <meta property="og:image" content={metaDetails.ogImg.url} />
+    <meta property="og:image:width" content={metaDetails.ogImg.width} />
+    <meta property="og:image:height" content={metaDetails.ogImg.height} />
+    <meta property="og:image:type" content={metaDetails.ogImg.type} />
+    <meta property="og:locale" content="en_US" />
+    <meta name="description" content={metaDetails.description} />
+    <meta name="keywords" content={metaDetails.keywords} />
+
+    <meta itemprop="name" content={metaDetails.title} />
+    <meta itemprop="description" content={metaDetails.description} />
+    <meta itemprop="image" content={metaDetails.ogImg.url} />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content={metaDetails.url} />
+    <meta name="twitter:site" content={metaDetails.twitterId} />
+    <meta name="twitter:creator" content={metaDetails.twitterId} />
+    <meta name="twitter:title" content={metaDetails.title} />
+    <meta name="twitter:description" content={metaDetails.description} />
+    <meta name="twitter:image:src" content={metaDetails.ogImg.url} />
+  </head>
+  <body class="bg-white dark:bg-black">
+    <Header class="py-5 max-w-[1100px] mx-auto px-2 md:px-12 lg:px-20" />
+    <main>
+      {
+        sections.map(({ id, Component }) => (
+          <Component
+            id={id}
+            class:list={["max-w-[1100px] mx-auto px-6 sm:px-12 lg:px-20"]}
+          />
+        ))
+      }
+    </main>
+
+    <Footer class="py-5 max-w-[1100px] mx-auto px-2 md:px-12 lg:px-20" />
+    <!-- <VenoBoxAnimations /> -->
   </body>
 </html>
