add dark mode support

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,5 +4,5 @@ import NavBar from "@/components/NavBar.astro";
 ---
 
 <header class:list={["w-full", className]}>
-  <NavBar />
+  <NavBar showThemeToggle={true} />
 </header>
