--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -18,9 +18,7 @@ const { id, class: className } = Astro.props;
         />
       </div>
       <div class="pt-[10px] md:pt-0 md:pl-[30px] lg:pl-[60px]">
-        <h1
-          class="text-[32px] sm:text-[40px] leading-[48px] text-primary font-bold"
-        >
+        <h1 class="text-[32px] sm:text-[40px] leading-[48px] font-bold">
           I'm a seasoned web development expert with a knack for UX design.
           <!-- Hi 👋, I'm Ritesh Sahu<br />
           I build things for the web -->
