--- a/src/components/DownloadCVButton.astro
+++ b/src/components/DownloadCVButton.astro
@@ -8,7 +8,7 @@ const { class: className } = Astro.props;
     class={`inline-flex justify-center items-center whitespace-nowrap 
       border-[#BF7506] border-b-2 pb-0.5 hover:pb-1 mb-0.5 hover:mb-0
           align-middle cursor-pointer select-none text-base font-semibold appearance-none px-[15px]
-         duration-150 transition-all delay-0
+         duration-150 transition-[border] delay-0
           `}
     title={personalDetails.resume.title}
     href={personalDetails.resume.link}
@@ -18,13 +18,14 @@ const { class: className } = Astro.props;
     <svg
       height="18"
       viewBox="0 0 11 22"
-      fill="none"
       xmlns="http://www.w3.org/2000/svg"
       class="mr-2"
     >
       <path
+        style="transition-timing-function: ease;"
+        class="fill-dark dark:fill-light transition-all duration-[350ms]"
         d="M9.5 5V16.5C9.5 18.71 7.71 20.5 5.5 20.5C3.29 20.5 1.5 18.71 1.5 16.5V4C1.5 2.62 2.62 1.5 4 1.5C5.38 1.5 6.5 2.62 6.5 4V14.5C6.5 15.05 6.05 15.5 5.5 15.5C4.95 15.5 4.5 15.05 4.5 14.5V5H3V14.5C3 15.88 4.12 17 5.5 17C6.88 17 8 15.88 8 14.5V4C8 1.79 6.21 0 4 0C1.79 0 0 1.79 0 4V16.5C0 19.54 2.46 22 5.5 22C8.54 22 11 19.54 11 16.5V5H9.5Z"
-        fill="#211B12"></path>
+      ></path>
     </svg>
 
     Download CV
