--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -83,7 +83,7 @@ const { showThemeToggle = false } = Astro.props;
           </a>
         ))
       }
-      {showThemeToggle && <ThemeToggle />}
+      <!-- {showThemeToggle && <ThemeToggle />} -->
     </div>
   </div>
 </nav>
