add venobox and responsive fixes

--- a/src/components/Contact2.astro
+++ b/src/components/Contact2.astro
@@ -10,13 +10,15 @@ const { id, class: className } = Astro.props;
     >
       Get in touch 👋
     </h1>
-    <p class="leading-[1.8] text-[22px]">
+    <p class="leading-[1.5] sm:leading-[1.8] text-[20px] sm:text-[22px]">
       I'm always open to discussing new opportunities, sharing insights, or
       simply connecting with like-minded professionals. If you think we can
       benefit from a conversation, feel free to reach out. Worst case, we both
       have a pleasant chat and exchange some valuable ideas.
     </p>
-    <div class="leading=[1.4] text-[28px] font-semibold mt-[30px]">
+    <div
+      class="leading-[1.2] sm:leading-[1.4] text-[22px] sm:text-[28px] font-semibold mt-[30px]"
+    >
       Send me an email at
       <a
         class="cursor-pointer font-semibold border-b-[5px] hover:pb-1 border-[#92cdff] duration-150 transition-all delay-0"
