--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,7 +7,7 @@ const { id, class: className } = Astro.props;
 <section id={id} class:list={["pt-10 pb-16", className]}>
   <h1 class="section-heading">My projects</h1>
   <p
-    class="pt-[15px] pb-[60px] text-[22px] text-[#777777] dark:text-[#b0aaa6] leading-[1.8] text-center"
+    class="pt-[15px] pb-[60px] text-[20px] sm:text-[22px] text-[#777777] dark:text-[#b0aaa6] leading-7 sm:leading-[1.8] text-center"
   >
     A showcase of innovative solutions and successful implementations.
   </p>
@@ -28,7 +28,7 @@ const { id, class: className } = Astro.props;
               href={link}
               rel="noopener noreferrer"
               target="_blank"
-              class="text-[32px] font-semibold align-middle pr-4 inline-block"
+              class="text-[30px] sm:text-[32px] font-semibold align-middle pr-4 inline-block"
             >
               {title}
             </a>
@@ -48,41 +48,61 @@ const { id, class: className } = Astro.props;
                 loading="lazy"
               />
             </div>
-            {/* <div class="flex flex-wrap justify-center gap-2 -mt-4 mb-10">
+
+            <div class="hidden">
               {images.map((img) => (
-                <Image
-                  class="h-6 w-auto border border-black"
-                  src={img}
-                  alt="Screenshot"
+                <a
+                  class:list={[
+                    "mr-2 border-2 border-gray-500 mb-2",
+                    `js--modal-image-${title.toLowerCase()}`,
+                  ]}
+                  data-gall={`${title.toLowerCase()}_gallary`}
+                  href={img.src}
                 />
               ))}
-            </div> */}
-            <div class="flex gap-6">
+            </div>
+            <div class="flex gap-5 sm:gap-6 flex-wrap">
               <a
                 class={`inline-flex justify-center items-center h-9 rounded whitespace-nowrap 
-                  align-middle transition-all cursor-pointer text-dark select-none text-base font-semibold appearance-none px-[18px]
-                  bg-[#ebebeb] hover:bg-[#f5f5f5]
+                  align-middle transition-all cursor-pointer text-light select-none text-base font-semibold appearance-none px-[18px]
+                  bg-[#3273dc] hover:bg-[#2260c4] gap-2.5
                   `}
                 href={link}
                 rel="noopener noreferrer"
                 target="_blank"
               >
-                Visit website →
+                <svg
+                  height="14"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
+                  />
+                </svg>
+                Visit Website
               </a>
-              {/* <a
+              <a
                 class={`inline-flex justify-center items-center h-9 rounded whitespace-nowrap 
                   align-middle transition-all cursor-pointer select-none text-base font-semibold appearance-none px-[18px]
-                  bg-[#ebebeb] hover:bg-[#f5f5f5]
+                  bg-[#ebebeb] hover:bg-[#f5f5f5] gap-2.5
                   `}
-                href={link}
-                rel="noopener noreferrer"
-                target="_blank"
+                id={`venobox_viewmore_${title.toLowerCase()}`}
+                href="#"
               >
-                Visit gallary{" "}
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                  <path d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM323.8 202.5c-4.5-6.6-11.9-10.5-19.8-10.5s-15.4 3.9-19.8 10.5l-87 127.6L170.7 297c-4.6-5.7-11.5-9-18.7-9s-14.2 3.3-18.7 9l-64 80c-5.8 7.2-6.9 17.1-2.9 25.4s12.4 13.6 21.6 13.6h96 32H424c8.9 0 17.1-4.9 21.2-12.8s3.6-17.4-1.4-24.7l-120-176zM112 192a48 48 0 1 0 0-96 48 48 0 1 0 0 96z" />
+                <svg
+                  height="16"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 576 512"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M160 80H512c8.8 0 16 7.2 16 16V320c0 8.8-7.2 16-16 16H490.8L388.1 178.9c-4.4-6.8-12-10.9-20.1-10.9s-15.7 4.1-20.1 10.9l-52.2 79.8-12.4-16.9c-4.5-6.2-11.7-9.8-19.4-9.8s-14.8 3.6-19.4 9.8L175.6 336H160c-8.8 0-16-7.2-16-16V96c0-8.8 7.2-16 16-16zM96 96V320c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H160c-35.3 0-64 28.7-64 64zM48 120c0-13.3-10.7-24-24-24S0 106.7 0 120V344c0 75.1 60.9 136 136 136H456c13.3 0 24-10.7 24-24s-10.7-24-24-24H136c-48.6 0-88-39.4-88-88V120zm208 24a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
+                  />
                 </svg>
-              </a> */}
+                Gallary{" "}
+              </a>
             </div>
           </article>
         )
@@ -90,3 +110,25 @@ const { id, class: className } = Astro.props;
     }
   </div>
 </section>
+
+<script>
+  import { projects } from "@/config/projects";
+  import VenoBox from "venobox";
+
+  projects.map((project) => {
+    const title = project.title.toLowerCase();
+    const venobox = new VenoBox({
+      selector: `.js--modal-image-${title}`,
+      // maxWidth: "80%", // default: ''
+      infinigall: true, // default: false,
+      numeration: true,
+    });
+
+    const viewMoreButton = document.getElementById(`venobox_viewmore_${title}`);
+    viewMoreButton.addEventListener("click", (e) => {
+      e.preventDefault();
+      const firstLink = document.querySelector(`.js--modal-image-${title}`);
+      venobox.open(firstLink);
+    });
+  });
+</script>
