update profile photo

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -14,7 +14,7 @@ const { id, class: className } = Astro.props;
         <Image
           class="size-36 md:size-52 max-w-none"
           src={img}
-          alt="Ritesh Sahu"
+          alt="Ritesh Sahu's Profile Photo"
         />
       </div>
       <div class="pt-[10px] md:pt-0 md:pl-[30px] lg:pl-[60px]">
