--- a/src/components/Contact2.astro
+++ b/src/components/Contact2.astro
@@ -4,12 +4,8 @@ const { id, class: className } = Astro.props;
 ---
 
 <section id={id} class="bg-[#f5f5f5]">
-  <div class:list={["py-20", className]}>
-    <h1
-      class="mb-8 section-heading bg-clip-text bg-gradient-to-tr from-[#d7d7d7] to-[#616161]"
-    >
-      Get in touch 👋
-    </h1>
+  <div class:list={["py-14 sm:py-20", className]}>
+    <h1 class="mb-8 section-heading">Get in touch 👋</h1>
     <p class="leading-[1.5] sm:leading-[1.8] text-[20px] sm:text-[22px]">
       I'm always open to discussing new opportunities, sharing insights, or
       simply connecting with like-minded professionals. If you think we can
