--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 const { id, class: className } = Astro.props;
 ---
 
-<section id={id} class:list={["pt-10 pb-16", className]}>
+<section id={id} class:list={["pt-7 sm:pt-10 pb-10 sm:pb-16", className]}>
   <h1 class="section-heading">My projects</h1>
   <p
     class="pt-[15px] pb-[60px] text-[20px] sm:text-[22px] text-[#777777] dark:text-[#b0aaa6] leading-7 sm:leading-[1.8] text-center"
