--- a/src/components/Contact2.astro
+++ b/src/components/Contact2.astro
@@ -3,7 +3,7 @@ import { personalDetails } from "@/config/details";
 const { id, class: className } = Astro.props;
 ---
 
-<section id={id} class="bg-[#f5f5f5]">
+<section id={id} class="bg-[#f5f5f5] dark:bg-dark">
   <div class:list={["py-14 sm:py-20", className]}>
     <h1 class="mb-8 section-heading">Get in touch 👋</h1>
     <p class="leading-[1.5] sm:leading-[1.8] text-[20px] sm:text-[22px]">
