--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -85,7 +85,7 @@ const { id, class: className } = Astro.props;
               </a>
               <a
                 class={`inline-flex justify-center items-center h-9 rounded whitespace-nowrap 
-                  align-middle transition-all cursor-pointer select-none text-base font-semibold appearance-none px-[18px]
+                  align-middle transition-all cursor-pointer select-none text-dark text-base font-semibold appearance-none px-[18px]
                   bg-[#ebebeb] hover:bg-[#f5f5f5] gap-2.5
                   `}
                 id={`venobox_viewmore_${title.toLowerCase()}`}
