--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,11 +1,12 @@
 ---
 import { navLinks } from "@/config";
 import { personalDetails } from "@/config/details";
-import ThemeToggle from "@/components/ThemeToggle.astro";
 const { showThemeToggle = false } = Astro.props;
 ---
 
-<nav class="block max-md:text-center md:flex items-center justify-between">
+<nav
+  class="block max-md:text-center md:flex items-center justify-between md:max-w-[calc(100vw_-_140px)]"
+>
   <div
     class="inline-flex items-center justify-between gap-[12px] mb-4 md:mb-0 border-0"
   >
@@ -83,7 +84,6 @@ const { showThemeToggle = false } = Astro.props;
           </a>
         ))
       }
-      <!-- {showThemeToggle && <ThemeToggle />} -->
     </div>
   </div>
 </nav>
