--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,6 +57,16 @@ const sections = [
     <meta name="twitter:title" content={metaDetails.title} />
     <meta name="twitter:description" content={metaDetails.description} />
     <meta name="twitter:image:src" content={metaDetails.ogImg.url} />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L2LT2GJRF0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-L2LT2GJRF0');
+    </script>
   </head>
   <body class="bg-light dark:bg-dark">
     <Header class="py-5 max-w-[1100px] mx-auto px-2 md:px-12 lg:px-20" />
