--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,8 +59,8 @@ const sections = [
     <meta name="twitter:image:src" content={metaDetails.ogImg.url} />
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L2LT2GJRF0"></script>
-    <script>
+    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-L2LT2GJRF0"></script>
+    <script type="text/partytown">
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
